--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ nav{
     background-color: rgb(1, 204, 136);
     height: 60px;
     width: 100%;
+    position: fixed;
 }
 
 .logo{
@@ -66,6 +67,31 @@ a.active, a:hover{
     display: none;
 }
 
+li.dropdown{
+    display: inline-block;
+}
+
+.dropdown-content{
+    display: none;
+    position: fixed;
+    background-color: rgb(1, 204, 136);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 0px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 @media (max-width: 990px){
     .logo{
         font-size: 30px;
@@ -107,5 +133,11 @@ a.active, a:hover{
     }
     #check:checked ~ ul{
         top: 60px;
+    }
+    li.dropdown{
+        display: block;
+    }
+    .dropdown-content{
+        display: none;
     }
 }
