--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ nav{
     background-color: rgb(1, 204, 136);
     height: 60px;
     width: 100%;
-    position: fixed;
 }
 
 .logo{
@@ -92,6 +91,11 @@ li.dropdown{
   display: block;
 }
 
+main{
+    position: absolute;
+    top: 60px;
+}
+
 @media (max-width: 990px){
     .logo{
         font-size: 30px;
@@ -102,14 +106,13 @@ li.dropdown{
     }
 }
 
-@media (max-width: 830px){
+@media (max-width: 835px){
     .checkbtn{
         display: block;
     }
     ul{
         position: fixed;
         width: 100%;
-        height: 100vh;
         background: rgb(1, 204, 136);
         top: 60px;
         top: -100%;
