--- a/style.css
+++ b/style.css
@@ -174,6 +174,13 @@ input[type=text] {
     box-sizing:border-box
 }
 
+.current{
+    width: 95%;
+    margin: auto;
+    padding: 20px;
+    padding-left: 0px;
+}
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 95%;
