--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav{
     font-size: 35px;
     font-weight: bold;
     line-height: 60px;
-    padding: 0 50px;
+    padding: 0 25px;
     position: absolute;
     z-index: 2;
 }
@@ -123,13 +123,22 @@ input[type=text] {
     font-family: serif;
 }
 
-@media (max-width: 990px){
+@media (max-width: 1330px){
     .logo{
         font-size: 30px;
-        padding-left: 50px;
+        padding: 0px 10px;
     }
     nav ul li a{
         font-size: 12px;
+    }
+    nav ul li{
+        margin: 0px 2px;
+    }
+    nav ul li a{
+        padding: 5px 5px;
+    }    
+    input[type=text]{
+        width: 200px;
     }
 }
 
