--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ input[type=text] {
         font-size: 20px;
     }
     a:hover, a.active{
-        color: #ffffff;
+        color: white;
     }
     .logo:hover{
         background-color: inherit;
