--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ input[type=text] {
 
 /* ------------------------------------------------------------------------------- */
 
-.current{
+h1{
     width: 95%;
     margin: auto;
     padding: 20px;
@@ -279,4 +279,79 @@ input[type=text] {
 @keyframes fade {
   from {opacity: 0.4}
   to {opacity: 1}
+}
+/* ------------------------------------------FOOTER------------------------------------------------------------------ */
+
+.company-details{
+	overflow: hidden;
+	padding: 30px 0px;
+	background: #E3F0F7;
+	text-align: center;
+	margin-top: 5em;
+}
+
+#footer #col1,
+#footer #col2,
+#footer #col3{
+    float: left;
+    width: 30%;
+    padding: 0px 40px 0px 40px;
+}
+
+#footer #icon{
+    display: block;
+    margin-bottom: 5px;
+    font-size: 40px;
+}
+
+.copyright
+{
+    overflow: hidden;
+    padding: 3em 0em;
+    border-top: 20px solid rgba(255, 255, 255, 0.08);
+    text-align: center;
+    background: #4CAF50;
+}
+
+.copyright p
+{
+    letter-spacing: 1px;
+    font-size: 0.90em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.copyright a
+{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+ul.contact{
+    margin: 0;
+    padding: 2em 0em 0em 0em;
+    list-style: none;
+}
+
+ul.contact li{
+    display: inline-block;
+    padding: 0em 0.10em;
+    font-size: 1em;
+}
+
+ul.contact li a{
+    color: black;
+    display: inline-block;
+    background: black;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+}
+
+@media (max-width: 835px){
+    #footer #col1,
+    #footer #col2,
+    #footer #col3{
+        width: 200px;
+    }
 }
