--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ nav ul li a{
     text-transform: uppercase;
 }
 
-a.active, a:hover{
+nav ul li a.active, a:hover{
     background-color: #ef8cc8;
     transition: 0.5s;
 }
@@ -142,6 +142,9 @@ input[type=text] {
     }
 }
 
+
+/* MEDIA QUERY */
+
 @media (max-width: 835px){
     .checkbtn{
         display: block;
@@ -179,6 +182,7 @@ input[type=text] {
         display: none;
     }
 }
+
 
 /* ------------------------------------------------------------------------------- */
 
@@ -280,78 +284,130 @@ h1{
   from {opacity: 0.4}
   to {opacity: 1}
 }
+
+
 /* ------------------------------------------FOOTER------------------------------------------------------------------ */
 
-.company-details{
-	overflow: hidden;
-	padding: 30px 0px;
-	background: #E3F0F7;
-	text-align: center;
-	margin-top: 5em;
+/* .contact{
+    float: right;
 }
 
-#footer #col1,
-#footer #col2,
-#footer #col3{
-    float: left;
-    width: 30%;
-    padding: 0px 40px 0px 40px;
+.social-media{
+    display: inline-block;
+}
+ */
+
+#footer{
+    color: white;
+    background-color: #459c98;
+    position: relative;
 }
 
-#footer #icon{
-    display: block;
-    margin-bottom: 5px;
-    font-size: 40px;
+
+.contact{
+    padding: 30px;
+	margin-top: 50px;
+    width: 100%;
 }
 
-.copyright
-{
-    overflow: hidden;
-    padding: 3em 0em;
-    border-top: 20px solid rgba(255, 255, 255, 0.08);
-    text-align: center;
-    background: #4CAF50;
+h3{
+    padding-bottom: 10px;
+    font-size: 20px;
+    font-family: montserratbold;
 }
 
-.copyright p
-{
-    letter-spacing: 1px;
-    font-size: 0.90em;
-    color: rgba(255, 255, 255, 0.6);
+#footer #row1,
+#footer #row2{
+    padding: 5px 0px;
 }
 
-.copyright a
-{
+#icon{
+    font-size: 25px;
+    padding-right: 10px;
+    position: relative;
+    top: 5px;
+}
+
+#icon:hover{
+    color: #ff079c;
+}
+
+#footer .follow{
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    padding: 30px;  
+    padding-left: 0;
+    width: 200px;
+}
+
+.follow li{
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.8);
-}
-
-ul.contact{
-    margin: 0;
-    padding: 2em 0em 0em 0em;
-    list-style: none;
-}
-
-ul.contact li{
+    list-style-type: none;
     display: inline-block;
-    padding: 0em 0.10em;
-    font-size: 1em;
+    padding: 5px 0px;
+    color: white;
 }
 
-ul.contact li a{
-    color: black;
-    display: inline-block;
-    background: black;
+.follow li:not(:first-of-type){
+    margin-left: 20px;
+}
+
+#fb, #tweet{
+    color: white;
+    background-color: #459c98;
+    font-size: 40px;
+    cursor: pointer;
+}
+
+#fb:hover{
+    background-color: #459c98;
+    color: #3b5998;
+}
+
+#footer img{
     width: 40px;
-    height: 40px;
-    line-height: 40px;
+    position: relative;
+    top: 4px;
+    filter: brightness(0) invert(1);
+    cursor: pointer;
+}
+
+#footer img:hover{
+    filter: none;
+}
+
+#tweet:hover{
+    background-color: #459c98;
+    color: #1DA1F2;
+}
+
+.copyright{
+    background: #ef8cc8;
+    padding: 15px 10px;
+    letter-spacing: 1px;
+    margin-bottom: 0px;
     text-align: center;
 }
 
-@media (max-width: 835px){
-    #footer #col1,
-    #footer #col2,
-    #footer #col3{
-        width: 200px;
+/* MEDIA QUERY */
+
+@media(max-width: 835px){
+    #footer .follow{
+        top: 90px;
+    }
+    .follow h3{
+        margin-left: -35px;
+    }
+}
+
+@media(max-width: 600px){
+    #footer{
+        position: static;
+    }
+
+    #footer .follow{
+        position: static;
+        width: 100%;
     }
 }
