--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ li.dropdown{
 .dropdown-content{
     margin-top: -0.5px;
     display: none;
-    position: fixed;
+    position: absolute;
     background-color: #459c98;
     min-width: 250px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
