--- a/style.css
+++ b/style.css
@@ -1,179 +1,252 @@
-/*---------------------------
-        MAIN SECTION
-----------------------------*/
-
-h1{
-    width: 95%;
-    margin: auto;
-    padding: 20px;
-    padding-left: 0px;
-    z-index: -2;
+*{
+  padding: 0;
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
 }
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 95%;
-  position: relative;
-  margin: auto;
-}
+/*----------------------------
+      MAIN SLICK SLIDER
+------------------------------*/
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next, .prev1, .next1 {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  margin-top: -40px;
-  padding: 16px;
-  color: white;
-  font-size: xx-large;
-  transition: 0.6s ease;
-  border-radius: 0 10px 10px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next, .next1 {
-  right: 0;
-  border-radius: 10px 0 0 10px;
-}
-
-/* Position the "alternate buttons" slightly moved from the actual position */
-.prev1{
-    color: black;
-    padding-left: 12px;
-}
-
-.next1{
-    color: black;
-    padding-right: 12px;
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
+.wrapper {
+  height: 50%;
   width: 100%;
-  text-align: center;
-  background-color: rgb(88, 87, 87, 0.5);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: 0.4}
-  to {opacity: 1}
-}
-
-/* ---------------------------------
-        SLICK SLIDER
-------------------------------------*/
-
-.container{
-  z-index: 10;
-}
-
-.details{
-  margin: 20px 0;
-  background-color: #fff;
-  padding: 30px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  z-index: 1;
 }
 
-.details h2{
-  font-size: 22px;
-  text-transform: uppercase;
+.slick-slider {
+  min-width: 0;
 }
 
-.details p{
-    font-size: 14px;
-}
-
-.details a{
-  text-decoration: none;
-  text-transform: capitalize;
-  color: #fff;
-  background-color: #2c3e50;
-  padding: 6px 12px;
-  display: inline-block;
-  font-size: 14px;
-  border: 1px solid #2c3e50;
-}
-  
-.details {
-  display: block;
-  position: relative;
-  max-width: 262px;
-  background-color: #f2f8f9;
-  border-radius: 4px;
-  padding: 32px 24px;
-  margin: 12px;
-  text-decoration: none;
-  z-index: 0;
+.slick-list {
   overflow: hidden;
 }
 
-.details:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  top: -12px;
-  left: -12px;
-  background: rgb(255, 115, 0);
-  height: 24px;
-  width: 24px;
-  border-radius: 24px;
-  transform: scale(1);
-  transform-origin: 50% 50%;
-  transition: transform 0.2s ease-in;
+.slick-track {
+  display: flex;
+  align-items: flex-start;
 }
-  
-.details:hover:before {
-  transform: scale(48);
+
+.main-slider {
+  position: relative;
 }
-  
-.details:hover p{
-  transition: all 0.3s ease-out;
-  color: rgba(255, 255, 255, 0.8);
+
+/* Customizing Arrows */
+
+.main-slider .slick-arrow {
+    position: absolute;
+    top: 50%;
+    margin: 0px 0px 0px 0px;
+    z-index: 10;
+    font-size: 0;
+    width: 30px;
+    height: 30px;
 }
-.details:hover h2 {
-  transition: all 0.2s ease-out;
-  color: #ffffff;
+
+.main-slider .slick-arrow.slick-prev {
+    left: 30px;
+}
+
+.main-slider .slick-arrow.slick-next {
+    right: 60px;
+}
+
+.main-slider .slick-arrow.slick-prev:before{
+    font-size: 40px;
+    fill: #ffffff;
+    padding: 0px 10px;
+    border-radius: 30px;
+    background-color: rgba(0, 0, 0, 0.868);
+    z-index: 2;
+    cursor: pointer;
+}
+
+.main-slider .slick-arrow.slick-next:before{
+    font-size: 40px;
+    fill: #ffffff;
+    padding: 0px 10px;
+    border-radius: 30px;
+    background-color: rgba(0, 0, 0, 0.868);
+    z-index: 2;
+    cursor: pointer;
+}
+
+/* Customizing Dots */
+
+.slick-dots {
+    bottom: 15px;
+}
+
+.slick-dots li button:before{
+    font-size: 50px;
+    color: #00fff2;
+    opacity: 0.7;
+}
+
+.slick-dots li.slick-active button:before{
+    color: #ff0099;
+    opacity: 1.5;
+}
+
+.main-slider .slick-arrow.slick-disabled {
+  opacity: 0.2;
+}
+
+.slider__item {
+  padding: 0px 0px;
+}
+.slider__item img {
+    width: 100%;
+    height: 600px;
+}
+
+/*----------------------------
+        SLICK SLIDER
+------------------------------*/
+
+.container-2 .wrapper {
+  height: 50%;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.slick-slider {
+  min-width: 0;
+}
+
+.slick-list {
+  overflow: hidden;
+}
+
+.slick-track {
+  display: flex;
+  align-items: flex-start;
+}
+
+.slider {
+  position: relative;
+}
+
+/* Customizing Arrows */
+
+.slider .slick-arrow {
+    position: absolute;
+    top: 50%;
+    margin: 0px 0px 0px 0px;
+    z-index: 10;
+    font-size: 0;
+    width: 30px;
+    height: 30px;
+}
+
+.slider .slick-arrow.slick-prev {
+    left: 30px;
+}
+
+.slider .slick-arrow.slick-next {
+    right: 60px;
+}
+
+.slider .slick-arrow.slick-prev:before{
+    font-size: 40px;
+    fill: #ffffff;
+    padding: 0px 10px;
+    border-radius: 30px;
+    background-color: rgba(0, 0, 0, 0.868);
+    z-index: 2;
+    cursor: pointer;
+}
+
+.slider .slick-arrow.slick-next:before{
+    font-size: 40px;
+    fill: #ffffff;
+    padding: 0px 10px;
+    border-radius: 30px;
+    background-color: rgba(0, 0, 0, 0.868);
+    z-index: 2;
+    cursor: pointer;
+}
+
+/* Customizing Dots */
+
+.slick-dots {
+    bottom: 15px;
+}
+
+.slick-dots li button:before{
+    font-size: 50px;
+    color: #00fff2;
+    opacity: 0.7;
+}
+
+.slick-dots li.slick-active button:before{
+    color: #ff0099;
+    opacity: 1.5;
+}
+
+.slider .slick-arrow.slick-disabled {
+  opacity: 0.2;
+}
+
+.slider .slider__item{
+    background-color: #f2f2f2;
+    height: 400px;
+    padding: 30px 0px;
+    border: 60px solid white;
+    z-index: 0;
+    overflow: hidden;
+    position: relative;
+}
+
+.slider .slider__item:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    background: rgb(255, 115, 0);
+    height: 24px;
+    width: 24px;
+    border-radius: 24px;
+    transform: scale(1);
+    transform-origin: 50% 50%;
+    transition: transform 0.3s ease-in;
+}
+
+
+.slider .slider__item img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: #00fff2;
+    z-index: 1;
+}
+
+.slider__item:hover:before {
+    transform: scale(48);
+    cursor: pointer;
+}
+
+.slider .slider__item h2{
+    text-align: center;
+}
+
+/*-----------------------------
+        MEDIA QUERY
+-------------------------------*/
+
+@media (max-width: 767px) {
+}
+
+@media (max-width: 767px) {
 }
