--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@
   top: 50%;
   left: 50%;
   margin: -85px 0px 0px -75px;
-  background: rgb(255, 115, 0);
+  background: #f98bcd;
   width: 150px;
   height: 150px;
   border-radius: 50%;
@@ -276,7 +276,7 @@
 }
 
 .slider .slick-prev:before, .slider .slick-next:before{
-  color: #f80b0b;
+  color: #ff0099;
 }
 
 .slider .slick-prev:before{
