--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@
   overflow: hidden;
   position: relative;
   border-radius: 10px;
+  box-shadow: 0px 0px 5px 5px rgba(158, 156, 156, 0.285);
 }
 
 .slider .slider__item:before {
