--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@
 }
 
 .slider .slick-prev:before, .slider .slick-next:before{
-  color: #025e59;
+  color: #0a4a47;
 }
 
 .slider .slick-prev:before{
