--- a/same.css
+++ b/same.css
@@ -1,7 +1,6 @@
 /*--------------------------
         HEADER
 ---------------------------*/
-
 *{
     margin: 0;
     padding: 0;
@@ -18,6 +17,10 @@ nav{
     height: 60px;
     width: 100%;
     text-decoration: none;
+}
+
+h1{
+    margin: 30px 0px 30px 50px;
 }
 
 .logo{
