--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
   position: absolute;
   top: 50%;
   margin: 0px 0px 0px 0px;
-  z-index: 10;
+  z-index: 4;
   font-size: 0;
   width: 30px;
   height: 30px;
@@ -61,7 +61,7 @@
   padding: 0px 10px;
   border-radius: 30px;
   background-color: rgba(0, 0, 0, 0.868);
-  z-index: 2;
+  z-index: 4;
   cursor: pointer;
 }
 
@@ -71,7 +71,7 @@
   padding: 0px 10px;
   border-radius: 30px;
   background-color: rgba(0, 0, 0, 0.868);
-  z-index: 2;
+  z-index: 4;
   cursor: pointer;
 }
 
@@ -145,7 +145,7 @@
   position: absolute;
   top: 50%;
   margin: 0px 0px 0px 0px;
-  z-index: 10;
+  z-index: 4;
   font-size: 0;
   width: 30px;
   height: 30px;
@@ -165,7 +165,7 @@
   padding: 0px 10px;
   border-radius: 30px;
   background-color: rgba(0, 0, 0, 0.868);
-  z-index: 2;
+  z-index: 4;
   cursor: pointer;
 }
 
@@ -175,7 +175,7 @@
   padding: 0px 10px;
   border-radius: 30px;
   background-color: rgba(0, 0, 0, 0.868);
-  z-index: 2;
+  z-index: 4;
   cursor: pointer;
 }
 
@@ -213,7 +213,7 @@
 
 .slider .slider__item:before {
   content: "";
-  z-index: -1;
+  z-index: 0;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -245,7 +245,7 @@
   border-radius: 50%;
   background: #fff;
   border: 2px solid var(--bg-color);
-  z-index: 1; 
+  z-index: 4; 
   transition: all 0.3s ease-out;
   position: relative;
 }
@@ -263,7 +263,7 @@
   position: absolute;
   top: 50%;
   margin: 0px -100px 0px -80px;
-  z-index: 10;
+  z-index: 4;
 }
 
 .slider .slick-arrow.slick-prev:before{
@@ -293,6 +293,53 @@
   position: absolute;
   top: 0;
   left: 0;
+}
+
+/*-----------------------------
+          LOADER
+-----------------------------*/
+
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #459c98;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+.loader {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  border: 4px solid #Fff;
+  animation: loader 2s infinite ease;
+}
+.loader-inner {
+  vertical-align: top;
+  display: inline-block;
+  width: 100%;
+  background-color: #fff;
+  animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+  0% { transform: rotate(0deg);}
+  25% { transform: rotate(180deg);}
+  50% { transform: rotate(180deg);}
+  75% { transform: rotate(360deg);}
+  100% { transform: rotate(360deg);}
+}
+
+@keyframes loader-inner {
+  0% { height: 0%;}
+  25% { height: 0%;}
+  50% { height: 100%;}
+  75% { height: 100%;}
+  100% { height: 0%;}
 }
 
 /*-----------------------------
