--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@
 /*-----------------------------
           LOADER
 -----------------------------*/
-
+/* 1.
 .loader-wrapper {
   width: 100%;
   height: 100%;
@@ -309,6 +309,7 @@
   display:flex;
   justify-content: center;
   align-items: center;
+  z-index: 11;
 }
 .loader {
   display: inline-block;
@@ -340,6 +341,73 @@
   50% { height: 100%;}
   75% { height: 100%;}
   100% { height: 0%;}
+} */
+
+/* 2. */
+.load-container {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background: #0C0404;
+}
+
+.span-container {
+  width: 100px;
+  height: 100px;
+  transform: translate(-50% -50%);
+  position: absolute;
+  top: 42%;
+  left: 45%;
+}
+
+.span {
+  display: block;
+  position: absolute;
+  width: 40%;
+  height: 40%;
+  border-radius: 50%;
+  animation: speed 2s infinite ease-in-out;
+}
+
+.one {
+  background: #c9ba12;
+  animation-delay: 1.5s;
+}
+
+.two {
+  background: #a11cc7;
+  animation-delay: 1s;
+}
+
+.three {
+  background: #237ead;
+  animation-delay: 0.5s;
+}
+
+.four {
+  background: #e0bcbc;
+}
+
+@keyframes speed {
+  0% {
+    transform: translate(0%);
+    border-radius: 50%;
+  }
+
+  25% {
+    transform: translate(150%) scale(0.5);
+    border-radius: 0%;
+  }
+
+  50% {
+    transform: translate(150%, 150%);
+    border-radius: 50%;
+  }
+
+  75% {
+    transform: translate(0, 150%) scale(0.5);
+    border-radius: 0%;
+  }
 }
 
 /*-----------------------------
