--- a/style.css
+++ b/style.css
@@ -346,9 +346,12 @@
 /* 2. */
 .load-container {
   width: 100%;
-  height: 100vh;
-  position: relative;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   background: #0C0404;
+
 }
 
 .span-container {
