--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@
 .load-container {
   width: 100%;
   height: 100%;
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   background: #0C0404;
