--- a/same.css
+++ b/same.css
@@ -119,7 +119,7 @@ li.dropdown{
     color: black;
 }
 
-input[type=text] {
+.navbar ul li input[type=text] {
     padding: 5px;
     font-size: 17px;
     width: 400px;
