--- a/style.css
+++ b/style.css
@@ -6,6 +6,60 @@
 }
 
 /*----------------------------
+        CUSTOM CURSOR
+------------------------------*/
+
+.follow_cursor{
+  width: 20px;
+  height: 20px;
+  background-color: rgb(233, 173, 173);
+  border: 1px solid rgb(234, 136, 136);
+  border-radius: 50%;
+  position: absolute;
+  transition: all 350ms ease-out;
+  z-index: 15;
+  animation: cursorAnim .5s infinite alternate;
+  pointer-events: none;
+}
+.cursor{
+  background-color: rgb(149, 12, 12);
+  border: 1px solid rgb(149, 12, 12);
+  border-radius: 50%;
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  transition: all 0ms ease-out;
+  z-index: 16;
+}
+
+@keyframes cursorAnim {
+  from {
+      transform: scale(1.3);
+  }
+  to {
+      transform: scale(.7);
+  }
+}
+
+@keyframes cursorAnim3 {
+  0% {
+      transform: scale(1);
+  }
+  50% {
+      transform: scale(3);
+  }
+  100% {
+      transform: scale(1);
+      opacity: 0;
+  }
+}
+
+.expand {
+  animation: cursorAnim3 .5s forwards;
+  border: 1px solid red;
+}
+
+/*----------------------------
       MAIN SLICK SLIDER
 ------------------------------*/
 
@@ -230,7 +284,6 @@
 .slider__item:hover:before {
   transform: scaleX(3) scaleY(3) scaleZ(10);
   /* transform: scale(2); */
-  cursor: pointer;
 }
 
 .slider .slider__item p {
@@ -293,6 +346,10 @@
   position: absolute;
   top: 0;
   left: 0;
+}
+
+*{
+  cursor: none;
 }
 
 /*-----------------------------
